[package]
name = "foreman"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "*"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
serde = "1.0.216"
serde_json = "1.0.133"
anyhow = "1.0.94"
config = "0.14.1"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"]}
simplelog = "0.12.2"
thiserror = "2.0.8"
dirs = "5.0.1"
axum = "0.7.9"
urlencoding = "2.1.3"
